# bdfinal

./: .env.example  .gitignore  .vercelignore  Dockerfile  Makefile  README.md  bootstrap.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  vercel.json
.streamlit/: config.toml
api/: index.py  main.py  requirements.txt
app/: __init__.py  main.py
app/static_data/: clusters.json  district_metrics.json  recommendations.json  transactions_summary.json
dashboard/: app.py
data/: __init__.py  __main__.py  collect_app_store_reviews.py  collect_competitor_pricing.py  collect_ptt_forum_signals.py  collect_public_demand_evidence.py  collect_search_trends.py  data.py  forum_evidence.py  ingest.py  leasepulse.db  paths.py  taipei_open_data.py
data/processed/: demand_evidence_public_report.json
data/sample/: competitor_benchmarks.json  forum_signals.json  survey_responses.json  transactions.csv
data/sources/: competitor_pricing_sources.json
docs/: architecture.md  hw2_integration.md
pipeline/: db.py  kmeans_segmentation.py  mapreduce_kmeans.py  processor.py  static_api_data.py  vercel_runtime.py
report/: generate_report.py
scripts/: _cli.py  collect_app_store_reviews.py  collect_competitor_pricing.py  collect_demand_evidence.py  collect_ptt_forum_signals.py  collect_public_demand_evidence.py  collect_search_trends.py  docker_bootstrap.sh  export_api_static_data.py  fetch_taipei_data.sh  ingest_open_data.py  package_submission.sh  run_all.sh  run_local.sh
tests/: test_ptt_helpers.py  test_smoke.py
