[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leasepulse-taipei"
version = "1.0.0"
description = "Rental pricing intelligence for Greater Taipei landlords"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "streamlit>=1.32.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.9",
  "redis>=5.0.0",
  "requests>=2.31.0",
  "urllib3>=2.0.0",
  "python-dotenv>=1.0.0",
  "plotly>=5.20.0",
  "reportlab>=4.1.0",
  "pyarrow>=15.0.0",
]

[project.scripts]
leasepulse-ingest = "scripts.ingest_open_data:main"
leasepulse-evidence = "scripts.collect_demand_evidence:main"
leasepulse-process = "pipeline.processor:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "api*", "scripts*", "data*"]
