[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leasepulse-taipei"
version = "1.0.0"
description = "Rental pricing intelligence for Greater Taipei landlords"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "sqlalchemy>=2.0.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
full = [
  "streamlit>=1.32.0",
  "psycopg2-binary>=2.9.9",
  "redis>=5.0.0",
  "urllib3>=2.0.0",
  "plotly>=5.20.0",
  "reportlab>=4.1.0",
  "pyarrow>=15.0.0",
  "beautifulsoup4>=4.12.0",
  "pytrends>=4.9.2",
]

[tool.vercel]
entrypoint = "app.main:app"

[project.scripts]
leasepulse-fetch = "data.taipei_open_data:main"
leasepulse-ingest = "data.ingest:main"
leasepulse-evidence = "data.collect_public_demand_evidence:main"
leasepulse-process = "pipeline.processor:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "app*", "api*", "scripts*", "data*"]
